# sales-dashboard

./: README.md  docker-compose.yml
backend/: Dockerfile  cli.py  main.py  pyproject.toml  serverless.yml
backend/app/application/file_storage/: __init__.py  product_image_storage.py
backend/app/application/repositories/: category_repository.py  order_repository.py  product_repository.py
backend/app/application/schemas/: category.py  dashboard.py  image_file.py  order.py  product.py
backend/app/application/use_cases/category/: create_category.py  delete_category.py  get_all_categories.py  get_category_by_id.py  update_category.py
backend/app/application/use_cases/dashboard/: get_metrics.py
backend/app/application/use_cases/order/: create_order.py  delete_order.py  get_all_orders.py  get_order_by_id.py  update_order.py
backend/app/application/use_cases/product/: create_product.py  delete_product.py  get_all_products.py  get_product_by_id.py  update_product.py
backend/app/domain/entities/: order.py  product.py
backend/app/domain/exceptions/: id_already_in_use_exception.py
backend/app/infrastructure/: environment_configs.py
backend/app/infrastructure/api/: __init__.py
backend/app/infrastructure/api/routes/: __init__.py  category_router.py  dashboard_router.py  health_router.py  order_router.py  product_router.py
backend/app/infrastructure/database/: mongodb.py
backend/app/infrastructure/file_storage/s3/: __init__.py  s3_product_image_storage.py
backend/app/infrastructure/serverless/: process_reports.py
frontend/: Dockerfile  index.html  (+1 more)
(+35 files in other folders)
