[project]
name = "sales-dashboard-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "joao",email = "joaopedroemerim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uuid (>=1.30,<2.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pymongo (>=4.11.1,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "boto3 (>=1.37.4,<2.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "faker (>=36.1.1,<37.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
